# inno_swe_reasoner

./: .gitignore  README.md  pyproject.toml
config/cf/: train.toml
config/swe_swiss_coconut/: train.toml
src/inno_swe_reasoner/: config.py  model.py
src/inno_swe_reasoner/coconut/: config.py  data.py  eval.py  lcb_eval.py  mock_data.json  model.py  notes.txt  train.py
src/inno_swe_reasoner/utils/: ckpt.py  logger.py  monitor.py  pydantic_config.py
