[project]
name = "inno-swe-reasoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "tomli-w>=1.2.0",
    "transformers>=4.57.1",
]

[project.scripts]
coconut = "inno_swe_reasoner.coconut.train:main"
